syntax = "proto3";

package sysclient;

option go_package = "./sysclient";

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginRes {
  int64 id = 1;
  string username = 2;
  string access_token = 4;
}

message UserAddReq {
  string username = 1;
  string password = 2;
  string nickname = 3;
}

message UserAddRes {
  string id = 1;
}

message UserInfoReq {
  int64 id = 1;
}

message UserInfoRes {
  string username = 1;
  string password = 2;
  string nickname = 3;
  int64 create_time = 4;
  int64 update_time = 5;
}

message UserListReq {
  optional int64 page_size = 1;
  optional int64 page_no = 2;
  optional string username = 3;
  optional string nickname = 4;
}

message UserListRes {
  int64 total = 1;
  int64 page_size = 2;
  int64 page_no = 3;
  bool has_next_page = 4;
  repeated UserInfoRes list = 5;
}

message UserUpdateReq {
  int64 id = 1;
  string username = 2;
  string password = 3;
  string nickname = 4;
}

message UserUpdateRes {
  int64 id = 1;
}

message UserDeleteReq {
  int64 id = 1;
}

message UserDeleteRes {
  int64 id = 1;
}

service UserService {
  rpc Login(LoginReq) returns (LoginRes);
  rpc UserAdd(UserAddReq) returns (UserAddRes);
  rpc UserInfo(UserInfoReq) returns (UserInfoRes);
  rpc UserList(UserListReq) returns (UserListRes);
  rpc UserUpdate(UserUpdateReq) returns (UserUpdateRes);
  rpc UserDelete(UserDeleteReq) returns (UserDeleteRes);
}
